RESOLVED FIXED169883
Suspend silent video playback in background tabs
https://bugs.webkit.org/show_bug.cgi?id=169883
Summary Suspend silent video playback in background tabs
Chris Dumez
Reported 2017-03-20 11:56:17 PDT
Suspend media playback in background tabs unless there is a reason not to (e.g. airplay) to save power.
Attachments
WIP patch (1.38 KB, patch)
2017-03-20 12:08 PDT, Chris Dumez
no flags
Patch (7.39 KB, patch)
2017-03-20 14:52 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-03-20 11:56:39 PDT
Chris Dumez
Comment 2 2017-03-20 12:08:34 PDT
Created attachment 304939 [details] WIP patch
WebKit Commit Bot
Comment 3 2017-03-20 12:10:47 PDT
Attachment 304939 [details] did not pass style-queue: ERROR: Source/WebCore/html/HTMLMediaElement.cpp:5338: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 1 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 4 2017-03-20 14:52:24 PDT
Chris Dumez
Comment 5 2017-03-20 16:47:39 PDT
Comment on attachment 304951 [details] Patch Clearing flags on attachment: 304951 Committed r214195: <http://trac.webkit.org/changeset/214195>
Chris Dumez
Comment 6 2017-03-20 16:47:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.