Suspend media playback in background tabs https://bugs.webkit.org/show_bug.cgi?id=169883 <rdar://problem/28056151>

Reviewed by Eric Carlson.

Source/WebCore:

Suspend media playback in background tabs to save battery
except in cases where we cannot (e.g. PiP, AirPlay).

Test: media/media-playback-page-visibility.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::visibilityStateChanged):
When page visibility state changes, begin / end media session
interruption with reason PlatformMediaSession::EnteringBackground.
This reason was already used on iOS when the application enters
or exist background. HTMLMediaElement::shouldOverrideBackgroundPlaybackRestriction()
takes care of preventing interruption in case of AirPlay or PiP.

LayoutTests:

Add layout test coverage.

* media/media-playback-page-visibility-expected.txt: Added.
* media/media-playback-page-visibility.html: Added.

Canonical link: https://commits.webkit.org/186828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214195 268f45cc-cd09-0410-ab3c-d52691b4dbfc